language/move-lang/tests/move_check/parser/function_acquires_missing_comma.exp
error: 

   ┌── tests/move_check/parser/function_acquires_missing_comma.move:5:21 ───
   │
 5 │     f() acquires X1 X2 {
   │                     ^^ Unexpected token: 'X2'
   ·
 5 │     f() acquires X1 X2 {
   │                     -- Expected: ','
   │

